# pixy_terrain

./: .gitignore  .gitmodules  .monitor_state.json  .reviewed_commits  ARCHITECTURE.md  CLAUDE.md  README.md  REVIEW_CHECKLIST.md  review_notes.md
.serena/: project.yml
godot/: pixy_terrain.gdextension  project.godot
godot/scenes/: player.tscn  shader_test.tscn  test_scene.tscn
godot/scripts/: demo_terrain.gd  demo_terrain.gd.uid  grass_test.gd  grass_test.gd.uid  orbit_camera.gd  orbit_camera.gd.uid  player.gd  player.gd.uid  shader_test_mesh.gd  shader_test_mesh.gd.uid  terrain_test.gd  terrain_test.gd.uid
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: box_geometry.rs  brush.rs  brush_preview.rs  chunk.rs  chunk_manager.rs  debug_log.rs  editor_plugin.rs  flower_planter.rs  gizmo.rs  grass_planter.rs  lib.rs  lod.rs  marching_squares.rs  mesh_builder.rs  mesh_extraction.rs  mesh_postprocess.rs  mesh_worker.rs  noise_field.rs  quick_paint.rs  shader_sync.rs  shader_validation.rs  shared_params.rs  terrain.rs  terrain_modifications.rs  terrain_stability.rs  texture_layer.rs  texture_preset.rs  tile_data.rs  undo.rs  voxel_grid.rs
rust/src/marching_squares/: cases.rs  cell_context.rs  mod.rs  primitives.rs  types.rs  validator.rs  vertex.rs
rust/src/shaders/: checkerboard.gdshader  stencil_cap.gdshader  stencil_write.gdshader  triplanar_multitex.gdshader  triplanar_pbr.gdshader  underground_cap.gdshader
slop/dev_journal/: 2026-01-29-fix-parallelization.md  2026-02-01-walkthrough-10-complete.md  2026-02-03-comprehensive-code-review-findings.md  (+1 more)
(+116 files in other folders)
