[package]
name = "pixy_terrain"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

transvoxel = "1.1.0"
noise = "0.9"
bevy_tasks = { version = "0.18", default-features = true }
crossbeam = "0.8"
num_cpus = "1.17"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
